--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "fastify": "^4.26.2",
     "nodemon": "^3.1.0",
+    "postgres": "^3.4.3",
+    "redis": "^4.6.13",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
   },
